# TreeLabOOP

./: CMakeLists.txt  README.md  main.cpp
include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Triangle.h
src/: Array.cpp  Figure.cpp  Hexagon.cpp  Octagon.cpp  Triangle.cpp
tests/: test_figures.cpp
